static/css/styles.css
body {
    font-size: .875rem;
}

.feather {
    width: 16px;
    height: 16px;
    vertical-align: text-bottom;
}

/*
 * Sidebar
 */

.sidebar {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    z-index: 100; /* Behind the navbar */
    padding: 0;
    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
}

.sidebar-sticky {
    position: -webkit-sticky;
    position: sticky;
    top: 48px; /* Height of navbar */
    height: calc(100vh - 48px);
    padding-top: .5rem;
    overflow-x: hidden;
    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
}

.sidebar .nav-link {
    font-weight: 500;
    color: #333;
}

.sidebar .nav-link .feather {
    margin-right: 4px;
    color: #999;
}

.sidebar .nav-link.active {
    color: black;
    font-weight: bold;
}

.sidebar .nav-link:hover .feather,
.sidebar .nav-link.active .feather {
    color: inherit;
}

.sidebar-heading {
    font-size: .75rem;
    text-transform: uppercase;
}

/*
 * Navbar
 */

.navbar-brand {
    padding-top: .75rem;
    padding-bottom: .75rem;
    font-size: 1rem;
    background-color: rgba(0, 0, 0, .25);
    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
}

.navbar .form-control {
    padding: .75rem 1rem;
    border-width: 0;
    border-radius: 0;
}

.form-control-dark {
    color: #fff;
    background-color: rgba(255, 255, 255, .1);
    border-color: rgba(255, 255, 255, .1);
}

.form-control-dark:focus {
    border-color: transparent;
    box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
}

/*
 * Utilities
 */

.border-top {
    border-top: 1px solid #e5e5e5;
}

.border-bottom {
    border-bottom: 1px solid #e5e5e5;
}

.series {
    margin-right: 0 auto;
    margin-left: 0 auto;
    margin-bottom: 100px;
}

#series-block {
    margin: 0 auto;
}

body {
    font-family: sans-serif;
    font-size: 11px;
}

.axis path,
.axis line {
    fill: none;
    stroke: #000;
    shape-rendering: crispEdges;
}

.tooltip {
    position: absolute;
    text-align: center;
    width: 140px;
    height: 55px;
    padding: 2px;
    border-radius: 8px;
    background: #DCDCDC;
    pointer-events: none;
}

li {
    display: block;
    padding: 4px;
}

div.legend {
    position: relative;
    bottom: 500;
    left: 700;
    font-size: 15px;
}

h1 {
    position: relative;
    left: 5%;
}

/*
 * Line Graph
 */
.axis--y path {
    display: none;
}

.points {
    fill: none;
    stroke: #aaa;
    stroke-linejoin: round;
    stroke-linecap: round;
    stroke-width: 1.5px;
}

.line--hover {
    stroke: #000;
}

.focus text {
    text-anchor: middle;
    text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
}

.voronoi path {
    fill: none;
    pointer-events: all;
}

.voronoi--show path {
    stroke: red;
    stroke-opacity: 0.2;
}

#form {
    top: 20px;
    right: 30px;
}

#trend-container {
    position: relative;
    height: 14em;
    width: 90%;
    margin: 30px auto;
    background: #1967d2;
    text-align: left;
    white-space: nowrap;
    overflow-x: auto;
    overflow-y: hidden;
    vertical-align: middle;
    border-radius: 15px;
    padding-top: 10px;
}

#trend-container select {
    display: inline-block;
    width: 14em;
    height: 11em;
    margin: 0.5em;
    border: 1px solid #A9A9A9;
    padding: 3px;
    white-space: normal;
    text-align: center;
    background-color: #5f9aec;
    color: white;
    border-radius: 15px;

}

#anomaly-container {
    position: relative;
    height: 14em;
    width: 90%;
    margin: 30px auto;
    background: #563d7c;
    text-align: left;
    white-space: nowrap;
    overflow-x: auto;
    overflow-y: hidden;
    vertical-align: middle;
    border-radius: 15px;
    padding-top: 10px;
}

#anomaly-container select {
    display: inline-block;
    width: 14em;
    height: 11em;
    margin: 0.5em;
    border: 1px solid #A9A9A9;
    padding: 3px;
    white-space: normal;
    text-align: center;
    background-color: #8465b3;
    color: white;
    border-radius: 15px;

}

#timepicker {
    position: relative;
    align-self: center;
    left: 5%;
}

/* This is a little hacky but works */
p.verification-text {
    position: sticky;
    left: 0;
    padding-left: 10px;
    width: 0;
}

.navbar-title {
    color: white;
    float: left;
    height: 50px;
    padding: 15px 15px;
    font-size: 20px;
    line-height: 20px;
}

#visualization {
    display: inline-block;
    position: relative;
    width: 80%;
    padding-bottom: 50%;
    vertical-align: top;
    overflow: hidden;
}

.svg-content {
    display: inline-block;
    position: absolute;
    top: 0;
    left: 0;
}

